--- a/src/assets/i18n/ru-RU.json
+++ b/src/assets/i18n/ru-RU.json
@@ -1,1 +1,166 @@
-{}
+{
+	"ABOUT": {
+		"TITLE": "О системе Avaya Meetings",
+		"RELEASE": "Версия:",
+		"AVAYA_TRADEMARKS": "Avaya Meetings и Equinox Conferencing — товарные знаки Avaya Inc.",
+		"OTHER_TRADEMARKS": "Java — товарный знак Sun Microsystems, Inc.; Microsoft, Windows и Internet Explorer — товарные знаки или зарегистрированные товарные знаки Microsoft Corporation на территории США и/или других стран.",
+		"TRADEMARKS_INFO": "Названия всех прочих продуктов, используемые в настоящем документе, являются товарными знаками или зарегистрированными товарными знаками соответствующих производителей.",
+		"COPYRIGHT_INFO": "Дополнительная информация об идентификации владельцев авторских прав на компоненты от третьих сторон и условий, которые применяются к данному продукту, доступна <a href=\"{{link}}\" target=\"_blank\">{{здесь}}</a>.",
+		"LICENCE": "Загружая программное обеспечение, устанавливая или используя его вы подтверждаете, что прочитали, поняли и приняли условия лицензионного соглашения на использование программного обеспечения Avaya Software License Terms (Avaya Products): ",
+		"LICENCE_I18N": "Английская, бразильская, французская (Канада), китайская, немецкая, итальянская, португальская, испанская, французская, японская и русская версии расположены на: ",
+		"USAGE_INFO": "Если у вас нет прямого доступа к Интернету, воспользуйтесь устройством с доступом к Интернету, чтобы просмотреть, загрузить и распечатать соответствующую лицензию.",
+		"COPYRIGHT": "© Avaya Inc., {{year}} г. Все права защищены.",
+		"CLOSE": "Закрыть",
+		"LINK": "ссылка"
+	},
+	"LOGIN": {
+		"SIGNING": "Выполняется вход...",
+		"LOADING": "Загрузка...",
+		"GREETING": "У вас уже есть учетная запись?",
+		"NAME": "имя пользователя",
+		"LOGIN": "вход",
+		"PASSWORD": "пароль",
+		"REMEMBER_ME": "Оставаться в системе",
+		"SIGN_IN": "Вход",
+		"LOG_IN": "Войти в систему",
+		"FORGOT_PASSWORD": "Забыли пароль?",
+		"OR_SIGN_IN": "или выполните вход с помощью",
+		"USE_ENTERPRISE_ACCOUNT": "Использовать мою корпоративную учетную запись (единый вход)",
+		"POPUP": {
+			"REMIND_PASSWORD_IN_EMAIL": "Вам отправлено электронное сообщение со ссылкой для восстановления пароля."
+		},
+		"ERROR": {
+			"INVALID_CREDENTIALS": "Неправильное имя пользователя или пароль.",
+			"VALIDATION_FAILED": "Имя пользователя и пароль не могут быть пустыми.",
+			"NOT_ALLOWED": "Нет разрешения на вход в систему.",
+			"USER_AUTH_DISABLED": "Для пользователя {{name}} отключена аутентификация",
+			"ERROR": "Сервер не отвечает, или на сервере произошла ошибка. Повторите попытку.",
+			"ERC_AUTH_USER_NAME": "Не удалось выполнить аутентификацию OAuth. Обратитесь за помощью к системному администратору.",
+			"ERC_AUTH_EMPTY_EMAIL": "Пользователь с неопределенным адресом электронной почты не может войти в систему"
+		}
+	},
+	"HEADER": {
+		"ABOUT": "О системе",
+		"SIGN_OUT": "Выход",
+		"SETTINGS": "Настройки",
+		"SIGN_IN": "Вход"
+	},
+	"BROWSERS": {
+		"BROWSER_NOT_SUPPORTED": "не может использоваться для присоединения к собранию. Воспользуйтесь одним из поддерживаемых браузеров.",
+		"YOUR": "Ваш",
+		"BROWSER": "браузер",
+		"BROWSERS": "браузеры",
+		"BROWSER_OUT_OF_DATE": "Устарел. Для оптимальной работы обновите браузер.",
+		"VERSION_EXCLUSION_FOR_WEBRTC": "Версия вашего браузера не поддерживает аудио/видео. Для оптимальной совместной работы<br>попробуйте другую версию, другой <span class=\"underline\">поддерживаемый браузер</span>, или загрузите клиент.",
+		"VERSION_EXCLUSION_FOR_DATE_ONLY": "Ваша версия браузера не поддерживает веб-конференции. Для оптимальной совместной работы<br>попробуйте другую версию, другой <span class=\"underline\">поддерживаемый браузер</span>, или загрузите клиент.",
+		"OLD_EDGE": "Ваш браузер несовместим с Avaya Meetings. Для оптимальной работы переключитесь на Google Chrome или последнюю версию Microsoft Edge."
+	},
+	"MSG_UTILS": {
+		"DOWNLOAD": "Загрузить",
+		"DOWNLOAD_APP": "Загрузить приложение",
+		"DOWNLOAD_UPDATE": "Загрузить обновление",
+		"DOWNLOAD_ADD_IN": "Добавить надстройку Avaya?",
+		"DOWNLOAD_OUTLOOK_PLUGIN": "Получите надстройку Meeting для Outlook в Microsoft Store.",
+		"CONTINUE": "Приложение установлено",
+		"BTN_RESOLVE": "Разрешить",
+		"DISMISS": "Отклонить",
+		"VIEW_ONLY": "Только просмотр",
+		"USE_BROWSER_TO_JOIN_AV": "Использовать аудио/видео в браузере",
+		"SCREEN_SHARING_EXTENSION_OFFER": "Поделиться экраном?",
+		"OUTLOOK_PLUGIN_NOTIFICATION": "Планируете собрания в Outlook?",
+		"DO_NOT_SHOW_AGAIN": "Не показывать снова",
+		"NOTIFICATION": {
+			"BAD_BROWSER": "Ваш браузер не позволяет использовать все функции.",
+			"NO_CLIENT_TO_RUN": "Клиенты для запуска отсутствуют.",
+			"LEARN_MORE": "Подробнее",
+			"NO_RESOURCES": "Ресурсы сервера еще не извлечены. Повторите попытку позднее.",
+			"NOT_AUTHENTICATED": "Для просмотра этого видео следует войти в систему",
+			"NOT_ACCESS_TO_PROGRAM": "У вас нет прав на просмотр этого видео",
+			"DONT_SHOW_AGAIN": "Больше не показывать"
+		},
+		"WEBRTC_MSG": {
+			"CAPTION": "Если вы продолжите использовать этот браузер...",
+			"MESSAGE": "Вы можете просматривать участников вашего собрания и просматривать экран, которым с вами делятся, однако для прослушивания аудио и просмотра видео вам потребуется отдельный вызов.",
+			"DO_MORE": "Хотите больше функций?",
+			"DO_MORE_MSG": "Воспользуйтесь одним из перечисленных ниже браузеров, чтобы добавить аудио и видео с вашего компьютера и поделиться экраном с другими участниками.",
+			"DO_MORE_DOWNLOAD_MSG": "Загрузите приложение или воспользуйтесь одним из перечисленных ниже браузеров, чтобы добавить аудио и видео с вашего компьютера и поделиться экраном с другими участниками.",
+			"OR": "или",
+			"DOWNLOAD_HINT": "Я хочу использовать полный набор мультимедийных функций",
+			"PRESENTATION_ONLY_HINT": "Я хочу только посмотреть презентацию (для прослушивания аудио я буду использовать телефон)",
+			"BAD_BROWSER_HEAD_MESSAGE": "Этот браузер не поддерживает собрания с аудио и видео. ",
+			"COPY_MEETING_LINK": "Скопируйте ссылку на собрание",
+			"COPY_PORTAL_LINK": "Скопируйте ссылку на портал",
+			"PASTE_MESSAGE": "и вставьте ее в актуальную версию Chrome для предоставления возможности поделиться аудио, видео и экраном в браузере.",
+			"SWC_CANT_RUN_IN_AV_HEADER": "Нельзя запустить веб-клиент в этом режиме.",
+			"SWC_CANT_RUN_IN_AV_MESSAGE": "Вы можете присоединиться в режиме только для просмотра или воспользоваться Avaya Workplace"
+		},
+		"CLIENT_APP": {
+			"NOT_FOUND": "Приложение не найдено. Убедитесь, что браузеру разрешен доступ по запросу или загрузите клиент.",
+			"CLIENT_NOT_FOUND": "Не удалось найти приложение {{clientName}}.",
+			"IF_INSTALLED": "Если у вас уже есть приложение {{clientName}}, ",
+			"TRY_AGAIN": "повторите попытку",
+			"MAKE_SURE_TO_ALLOW_REQUEST": " и разрешите запуск диспетчера установки при появлении соответствующего запроса.",
+			"CLIENT_UPDATE_AVAILABLE": "Обновление {{clientName}} доступно.",
+			"CLIENT_UPDATE_REQUIRED": "Требуется обновление Avaya Workplace",
+			"WAIT_INSTALL": "Нажмите после установки приложения",
+			"EXTERNAL_PROTOCOL_WARNING": "Для наибольшего удобства нам нужно ваше разрешение на проверку установлено ли приложение.\nПримите запрос браузера после нажатия кнопки «Вперед!».",
+			"GOT_IT": "Вперед!",
+			"FORCE_UPDATE_TEXT": "Ваше приложение устарело.\n Обновите его до актуальной версии.",
+			"FIRST_TIME_JOIN": "Похоже, вы здесь впервые. Как вы хотите присоединиться к собранию?",
+			"JOIN_PRESENTATION": "Подключить только презентацию",
+			"PRESENTATION_DUALIN": "Только презентацию / Дозвон",
+			"USE_CUMPUTER": "Использовать мой компьютер для аудио и видео",
+			"USE_BROWSER_TO_JOIN": "Использовать мой браузер, чтобы присоединиться",
+			"DOWNLOAD_TO_JOIN": "Загрузить приложение",
+			"HAVE_CLIENT": "Приложение установлено",
+			"CHOOSE_APP": "Каким приложением вы хотите воспользоваться?",
+			"HAVE_YOU_APP": "Вы установили приложение?",
+			"DOES_NOT_SUPPORT": "Этот браузер не поддерживает собрания с аудио и видео.",
+			"APP_INSTALLED": "Нажмите после завершения установки приложения",
+			"APP_INSTALLED_BUTTON": "Приложение установлено",
+			"MORE_INFO": " и вставьте ее в актуальную версию Chrome или Firefox для того, чтобы поделиться аудио, видео и экраном в браузере, или",
+			"COPY_MEETING_LINK": "Скопируйте ссылку на собрание",
+			"DONT_HAVE_MICROPHONE": "Для участия в этом собрании нужен микрофон.",
+			"CONNECT_MICROPHONE": "Попробуйте подключить микрофон и повторите попытку.",
+			"MIC_NOT_FOUND": "Микрофон не найден",
+			"CHECK_MIC": "Подключите микрофон или гарнитуру и снова использовать браузер.",
+			"MIC_WAS_FOUND": "Микрофон подключен",
+			"MIC_WAS_CHECKED": "Микрофон или гарнитура подключены. \nПопробуйте использовать браузер еще раз."
+		},
+		"CREATE_METING": {
+			"NUMBER_EXCEED": "Количество участников превысило максимальное значение, установленное в настройках виртуальной комнаты.",
+			"CONTINUING": "Если вы продолжите, не все участники смогут присоединиться к собранию.",
+			"CONTINUE_SENDING": "Продолжить отправку",
+			"CANCEL": "Отмена"
+		},
+		"DOWNLOAD_DIALOG": {
+			"DOWNLOAD_AFTER_SETTING_TITLE": "После установки приложения откройте его и проверьте настройки аудио и видео.",
+			"OPEN_THE_EQUINOX": "Откройте приложение.",
+			"DOWNLOAD_AND_JOIN": "После установки приложения нажмите Использовать приложение.",
+			"JOIN_BUTTON": "Присоединиться в приложении",
+			"CHECK_CLIENT": "Проверка аудио и видео",
+			"INSTALL_AND_CHECK": "После установки приложения откройте его и завершите настройку."
+		},
+		"FIRST_LOUNCH_TUTORIAL": {
+			"RESET_FIRST_LAUNCH_TUTORIALS": "Учебник",
+			"NON_WEBRTC": {
+				"SETTINGS": "Вы можете ознакомиться со сведениями о клиенте и не только",
+				"SIGN_IN": "У вас есть учетная запись? Нажмите \"Войти\", чтобы получить к ней доступ.",
+				"JOIN": "После ввода своего имени и идентификатора собрания укажите, каким способом вы желаете присоединиться к собранию."
+			},
+			"WEBRTC": {
+				"SETTINGS": "Вы можете установить флажок \"Присоединиться без видео\", ознакомиться со сведениями о клиенте и не только",
+				"SIGN_IN": "У вас есть учетная запись? Нажмите \"Войти\", чтобы получить к ней доступ.",
+				"JOIN": "После ввода своего имени и идентификатора собрания укажите, каким способом вы желаете присоединиться к собранию."
+			},
+			"LOGIN_IN": {
+				"MEETING_ROOM": "Выберите собственную комнату для собрания или собрания, к которым вы уже присоединялись. Вы можете также поделиться приглашением в выбранную комнату для собрания (в том числе, по электронной почте).",
+				"MEETING_IN_PROGRESS": "Здесь будет показано ваше текущее собрание"
+			}
+		},
+		"PIN_UPDATE": {
+			"PIN_UPDATE_TITLE": "Срок действия PIN-кода модератора для вашего собрания истек. Измените PIN-код в ",
+			"OPEN_SETTINGS": "настройках"
+		}
+	}
+}
